# crospi_core

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  etasl_ros2.code-workspace  install.sh  package.xml  ur10_robot.dot
.github/workflows/: gitlab-mirror.yml
crospi_py/: etasl_params.py
deleteme_etasl/: kuka_iiwa_jointspace_trap.lua  kuka_iiwa_test_etasl.lua  move_cartesianspace.lua  move_jointspace_trap.lua  move_joystick.lua  taskspec.lua  taskspec2.lua
deleteme_fsms/yasmin/: event_state.py  kuka_iiwa_test_yasmin.py  nested_sequence_example_etasl.py
deleteme_robot_description/: rviz_config.rviz
deleteme_robot_description/urdf/: one_dof_robot.urdf.xml
deleteme_scripts_old/definitions/: tst.lua
deleteme_scripts_old/etasl/: default-task.json  default-task.lua  four_bar_mechanism.json  move_circle.json  move_circle.sh  moveto-jointspace.json  moveto-jointspace.lua  moveto-jointspace.sh  robot.json  robotsim_ur10e.json  tst.json
deleteme_scripts_old/json/: blackboard.json  defs.json  json-etasl.lua  json-schema-documentation.html  moveto.json  my_task_schema.json  online-validating.html  paramdef.json  schema2.json  schema3.json  tst.lua  tst_array.json  value2.json  value3.json  with_comments.json
deleteme_scripts_old/lua/: iroslua.lua
deleteme_scripts_old/notebooks/: graphs.ipynb  tracking-differentiator.ipynb  (+1 more)
documentation/: .gitignore  browse.sh  mkdocs.yml  requirements.txt
env-hooks/: package_crospi_core_lua_configure_paths.sh.in  package_etasl_ros2_lua_configure_paths.sh.in
etasl/: example_ur10.lua  kuka_iiwa_test_etasl.lua  move_cartesianspace.lua  move_jointspace_trap.lua  move_joystick.lua  moving_jointspace_trap.lua  ramasa.lua  taskspec2.lua  taskspec3.lua
etasl_ros2_py/: etasl_params.py
include/: IO_handlers_deleteme.hpp  featurevariableinitializer.hpp  port_observer.hpp
install/: local_setup.sh  setup.sh
launch/: load_1_dof_robot.launch.py  load_etasl_node.launch.py  load_etasl_node.py  load_kuka_iiwa_setup.launch.py  load_simple_etasl_node.launch.py  load_ur10_setup.launch.py
log/: latest_build
robot_description/: rviz_config.rviz
src/: etasl_node.cpp  featurevariableinitializer.cpp  featurevariableinitializer.hpp  test_solver_lua.cpp
src/etasl_node/: CMakeLists.txt  etasl_node.cpp  etasl_node.hpp
src/misc/: CMakeLists.txt  IO_handlers.cpp  IO_handlers_deleteme.cpp  featurevariableinitializer.cpp  port_observer.cpp
src/misc/crospi_node_utils/: CMakeLists.txt  DELETEME_jointstateinputhandler.cpp  DELETEME_jointstateinputhandlerfactory.cpp  DELETEME_jointstateoutputhandler.cpp  DELETEME_robotsimulator.cpp  DELETEME_robotsimulatorfactory.cpp  DELETEME_rosloghandler.cpp  DELETEME_rostask.cpp  DELETEME_tfinputhandlerfactory.cpp  DELETEME_tfoutputhandler.cpp  DELETEME_topicinputhandlerfactory.cpp  DELETEME_topicoutputhandler.cpp  DELETEME_wrenchinputhandlerfactory.cpp  io_handler_manager.cpp  multiple_drivers_manager.cpp  multiple_drivers_manager_DELETEME.cpp  robot_driver_manager_DELETEME.cpp  robot_driver_manager_lockfree.cpp
src/misc/crospi_utils/: CMakeLists.txt  DELETEME_fileoutputhandler.cpp  DELETEME_fileoutputhandlerfactory.cpp  DELETEME_task.cpp  amentlua.cpp  blackboard.cpp  featurevariableinitializer.cpp  json_checker.cpp  outputhandler.cpp  printobserver.cpp  qpoasessolverfactory.cpp  solverregistry_backup.cpp  string_interpolate.cpp
src/misc/etasl_node_utils/: CMakeLists.txt  DELETEME_jointstateinputhandler.cpp  DELETEME_jointstateinputhandlerfactory.cpp  DELETEME_robotsimulator.cpp  DELETEME_robotsimulatorfactory.cpp  DELETEME_rosloghandler.cpp  DELETEME_tfinputhandlerfactory.cpp  DELETEME_topicinputhandlerfactory.cpp  DELETEME_wrenchinputhandlerfactory.cpp  input_handler_manager.cpp  io_handler_manager.cpp  jointstateinputhandler.cpp  jointstateinputhandlerfactory.cpp  jointstateoutputhandler.cpp  jointstateoutputhandlerfactory.cpp  multiple_drivers_manager.cpp  robot_driver_manager.cpp  robot_driver_manager_lockfree.cpp  robotsimulatorfactory.cpp  rostask.cpp  tfinputhandler.cpp  tfinputhandlerfactory.cpp  tfoutputhandler.cpp  tfoutputhandlerfactory.cpp  topicinputhandler.cpp  topicinputhandlerfactory.cpp  topicoutputhandler.cpp  topicoutputhandlerfactory.cpp  twistinputhandler.cpp  twistinputhandlerfactory.cpp  wrenchinputhandler.cpp  wrenchinputhandlerfactory.cpp
src/misc/etasl_task_utils/: CMakeLists.txt  DELETEME_fileoutputhandler.cpp  DELETEME_fileoutputhandlerfactory.cpp  blackboard.cpp  featurevariableinitializer.cpp  fileoutputhandlerfactory.cpp  json_checker.cpp  jsonvalidation.cpp  outputhandler.cpp  printobserver.cpp  qpoasessolverfactory.cpp  solverregistry_backup.cpp  string_interpolate.cpp  task.cpp
src/misc/etasl_task_utils/old/: robotsimulator.cpp  robotsimulatorfactory.cpp
src/misc/kuka_iiwa_driver/: CMakeLists.txt  kukaiiwa_robotdriver.cpp  kukaiiwa_robotdriverfactory.cpp
src/misc/robot_interfacing_utils/: CMakeLists.txt  DELETEME_simulationrobotdriver.cpp  DELETEME_simulationrobotdriverfactory.cpp  simulationrobotdriver.cpp  simulationrobotdriverfactory.cpp  thread_manager.cpp
src/misc/simple_kinematic_simulation/: CMakeLists.txt  simple_kinematic_simulation.cpp  simple_kinematic_simulation_factory.cpp
src/ros2_nodes/crospi_node/: CMakeLists.txt  crospi_node.cpp  crospi_node.hpp
src/ros2_nodes/erwin_node/: CMakeLists.txt  erwin_node_test.cpp
src/ros2_nodes/etasl_node/: CMakeLists.txt  etasl_node.cpp  etasl_node.hpp
src/ros2_nodes/shared_memory_test/: CMakeLists.txt  shared_memory_test.cpp  shared_memory_test.hpp
src/ros2_nodes/shared_memory_test_mutex/: CMakeLists.txt  shared_memory_test_mutex.cpp  shared_memory_test_mutex.hpp
src/ros2_nodes/shared_memory_test_new_drivers/: CMakeLists.txt  robotdriver2.hpp  shared_memory_test_new_drivers.cpp  shared_memory_test_new_drivers.hpp  simple_robot_simulation.cpp  simple_robot_simulation.hpp
src/ros2_nodes/simple_etasl_node/: CMakeLists.txt  simple_etasl_node.cpp  simple_etasl_node.hpp
src/ros2_nodes/test_publisher_node/: CMakeLists.txt  simple_robot_node.cpp
yaml_files/: param_test.yaml  tst.json
(+335 files in other folders)
